--- a/CR_AN_DUCLOY_OSCAMOU.tex
+++ b/CR_AN_DUCLOY_OSCAMOU.tex
@@ -716,5 +716,5 @@ Lien téléchargement du son non amorti sur 2 secondes : \href{https://drive.goo
 
 Lien téléchargement du son amorti sur 2 secondes : \href{https://drive.google.com/uc?export=download&id=1E1k3nFMNvk4p9HQP9ZI2LJBZikAHHUWY}{Cliquez-ici} \\
 
-Lien du programme LaTeX : \href{https://github.com/DucloyLeo/TPAN2021.git}{Cliquez-ici} \\
+Lien du programme LaTeX : \href{https://github.com/DucloyLeo/TPAN2021/blob/bc6d37ec952098e19353054defa8f43364b7912c/CR_AN_DUCLOY_OSCAMOU.tex}{Cliquez-ici} \\
 \end{document}
